deploy/guestbook-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-vassaln
  annotations:
     kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vassaln.34.79.246.69.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-vassaln
            port:
              number: 80
